--- a/index.html
+++ b/index.html
@@ -4,9 +4,228 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="lib/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Single Blog Website</title>
   </head>
   <body>
-    <h1>blog</h1>
+    <!-- ! Nav Section Start -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-bar">
+      <div class="container">
+        <a class="navbar-brand" href="#">BlogX</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                More
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <!-- ! Nav Section End ------- -->
+    <!-- ! Content Section start ------- -->
+    <section class="Main-content">
+      <div class="container">
+        <div class="row align-items-start">
+          <div class="col-3 pt-3 left-bar">
+            <div id="list-example" class="list-group">
+              <a
+                class="list-group-item list-group-item-action"
+                href="#list-item-1"
+                >Item 1</a
+              >
+              <a
+                class="list-group-item list-group-item-action"
+                href="#list-item-2"
+                >Item 2</a
+              >
+              <a
+                class="list-group-item list-group-item-action"
+                href="#list-item-3"
+                >Item 3</a
+              >
+              <a
+                class="list-group-item list-group-item-action"
+                href="#list-item-4"
+                >Item 4</a
+              >
+              <a
+                class="list-group-item list-group-item-action"
+                href="#list-item-5"
+                >Item 5</a
+              >
+              <a
+                class="list-group-item list-group-item-action"
+                href="#list-item-6"
+                >Item 6</a
+              >
+              <a
+                class="list-group-item list-group-item-action"
+                href="#list-item-7"
+                >Item 7</a
+              >
+            </div>
+          </div>
+          <div class="col-6 main-bar">
+            <div
+              data-bs-spy="scroll"
+              data-bs-target="#list-example"
+              data-bs-offset="0"
+              class="scrollspy-example"
+              tabindex="0"
+            >
+              <h4 id="list-item-1">Item 1</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Adipisci ex laboriosam vero velit ipsum libero consectetur
+                reiciendis, quasi ea esse ratione nihil iusto quis quia mollitia
+                fugit veritatis earum quisquam culpa. Iusto in praesentium
+                magnam nemo, quaerat sed minima id!
+              </p>
+              <h4 id="list-item-2">Item 2</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non
+                pariatur eligendi nesciunt consequatur nam temporibus ullam
+                tenetur cum quia sapiente qui, voluptate, itaque ex dolorem
+                minus magni saepe necessitatibus asperiores at dolor dolores
+                quam omnis voluptatibus iure. Accusamus, nulla maxime?
+              </p>
+              <h4 id="list-item-3">Item 3</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates velit excepturi perferendis nesciunt accusamus
+                delectus quis provident facere, repellat, nostrum fuga aperiam.
+                Ipsum quas rem corporis pariatur vel voluptatem dolores,
+                assumenda necessitatibus nostrum fugiat non nobis magni, fuga
+                earum animi?
+              </p>
+              <h4 id="list-item-4">Item 4</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
+                minima ratione fuga ipsam vitae officia beatae atque
+                necessitatibus, fugit quae tempore dolorum maiores veniam
+                incidunt nemo nobis sed aliquid, consequatur voluptates!
+                Asperiores ipsam consequuntur doloribus et error ipsum molestias
+                nisi!
+              </p>
+              <h4 id="list-item-5">Item 5</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
+                minima ratione fuga ipsam vitae officia beatae atque
+                necessitatibus, fugit quae tempore dolorum maiores veniam
+                incidunt nemo nobis sed aliquid, consequatur voluptates!
+                Asperiores ipsam consequuntur doloribus et error ipsum molestias
+                nisi!
+              </p>
+              <h4 id="list-item-6">Item 6</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
+                minima ratione fuga ipsam vitae officia beatae atque
+                necessitatibus, fugit quae tempore dolorum maiores veniam
+                incidunt nemo nobis sed aliquid, consequatur voluptates!
+                Asperiores ipsam consequuntur doloribus et error ipsum molestias
+                nisi!
+              </p>
+              <h4 id="list-item-7">Item 7</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
+                minima ratione fuga ipsam vitae officia beatae atque
+                necessitatibus, fugit quae tempore dolorum maiores veniam
+                incidunt nemo nobis sed aliquid, consequatur voluptates!
+                Asperiores ipsam consequuntur doloribus et error ipsum molestias
+                nisi!
+              </p>
+            </div>
+          </div>
+          <div class="col-3 right-bar">
+            <nav id="navbar-example3" class="navbar navbar-light bg-light flex-column align-items-stretch p-3">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <nav class="nav nav-pills flex-column">
+                <a class="nav-link" href="#item-1">Item 1</a>
+                <nav class="nav nav-pills flex-column">
+                  <a class="nav-link ms-3 my-1" href="#item-1-1">Item 1-1</a>
+                  <a class="nav-link ms-3 my-1" href="#item-1-2">Item 1-2</a>
+                </nav>
+                <a class="nav-link" href="#item-2">Item 2</a>
+                <a class="nav-link" href="#item-3">Item 3</a>
+                <nav class="nav nav-pills flex-column">
+                  <a class="nav-link ms-3 my-1" href="#item-3-1">Item 3-1</a>
+                  <a class="nav-link ms-3 my-1" href="#item-3-2">Item 3-2</a>
+                </nav>
+              </nav>
+            </nav>
+            
+            <!-- <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-offset="0" tabindex="0">
+              <h4 id="item-1">Item 1</h4>
+              <p>...</p>
+              <h5 id="item-1-1">Item 1-1</h5>
+              <p>...</p>
+              <h5 id="item-1-2">Item 1-2</h5>
+              <p>...</p>
+              <h4 id="item-2">Item 2</h4>
+              <p>...</p>
+              <h4 id="item-3">Item 3</h4>
+              <p>...</p>
+              <h5 id="item-3-1">Item 3-1</h5>
+              <p>...</p>
+              <h5 id="item-3-2">Item 3-2</h5>
+              <p>...</p>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ! Content Section End ------- -->
+    <script src="lib/bootstrap.bundle.min.js"></script>
   </body>
 </html>
