remove an unnecessary file

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 aria-orientation="vertical"
               >
                 <button
-                  class="nav-link active text-secondary"
+                  class="nav-link active"
                   id="v-pills-home-tab"
                   data-bs-toggle="pill"
                   data-bs-target="#v-pills-home"
@@ -102,7 +102,7 @@
                   Documents
                 </button>
                 <button
-                  class="nav-link text-secondary"
+                  class="nav-link "
                   id="v-pills-profile-tab"
                   data-bs-toggle="pill"
                   data-bs-target="#v-pills-profile"
@@ -114,7 +114,7 @@
                   Profile
                 </button>
                 <button
-                  class="nav-link text-secondary"
+                  class="nav-link "
                   id="v-pills-messages-tab"
                   data-bs-toggle="pill"
                   data-bs-target="#v-pills-messages"
@@ -126,7 +126,7 @@
                   Messages
                 </button>
                 <button
-                  class="nav-link text-secondary"
+                  class="nav-link "
                   id="v-pills-settings-tab"
                   data-bs-toggle="pill"
                   data-bs-target="#v-pills-settings"
@@ -152,7 +152,7 @@
                   aria-orientation="vertical"
                 >
                   <button
-                    class="nav-link active text-secondary"
+                    class="nav-link active "
                     id="v-pills-home-tab"
                     data-bs-toggle="pill"
                     data-bs-target="#v-pills-home"
@@ -164,7 +164,7 @@
                     Documents
                   </button>
                   <button
-                    class="nav-link text-secondary hover-light"
+                    class="nav-link"
                     id="v-pills-profile-tab"
                     data-bs-toggle="pill"
                     data-bs-target="#v-pills-profile"
@@ -176,7 +176,7 @@
                     Profile
                   </button>
                   <button
-                    class="nav-link text-secondary"
+                    class="nav-link"
                     id="v-pills-messages-tab"
                     data-bs-toggle="pill"
                     data-bs-target="#v-pills-messages"
@@ -188,7 +188,7 @@
                     Messages
                   </button>
                   <button
-                    class="nav-link text-secondary"
+                    class="nav-link"
                     id="v-pills-settings-tab"
                     data-bs-toggle="pill"
                     data-bs-target="#v-pills-settings"
