--- a/index.html
+++ b/index.html
@@ -59,152 +59,7 @@
           <div class="col-md-3 d-none d-md-block left-bar">
             <div class="d-flex align-items-start">
               <div class="accordion w-100" id="accordionExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingOne">
-                    <button
-                      class="accordion-button"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#collapseOne"
-                      aria-expanded="true"
-                      aria-controls="collapseOne"
-                    >
-                      Getting Started
-                    </button>
-                  </h2>
-                  <div
-                    id="collapseOne"
-                    class="accordion-collapse collapse"
-                    aria-labelledby="headingOne"
-                    data-bs-parent="#accordionExample"
-                  >
-                    <div class="accordion-body">
-                      <ul>
-                        <li><a href="#">Introduction</a></li>
-                        <li><a href="#">Contents</a></li>
-                        <li><a href="#">Javascript</a></li>
-                        <li><a href="#">Accesibility</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingTwo">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#collapseTwo"
-                      aria-expanded="false"
-                      aria-controls="collapseTwo"
-                    >
-                      Customize
-                    </button>
-                  </h2>
-                  <div
-                    id="collapseTwo"
-                    class="accordion-collapse collapse"
-                    aria-labelledby="headingTwo"
-                    data-bs-parent="#accordionExample"
-                  >
-                    <div class="accordion-body">
-                      <ul>
-                        <li><a href="#">Introduction</a></li>
-                        <li><a href="#">Contents</a></li>
-                        <li><a href="#">Javascript</a></li>
-                        <li><a href="#">Accesibility</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingThree">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#collapseThree"
-                      aria-expanded="false"
-                      aria-controls="collapseThree"
-                    >
-                      Components
-                    </button>
-                  </h2>
-                  <div
-                    id="collapseThree"
-                    class="accordion-collapse collapse"
-                    aria-labelledby="headingThree"
-                    data-bs-parent="#accordionExample"
-                  >
-                    <div class="accordion-body">
-                      <ul>
-                        <li><a href="#">Introduction</a></li>
-                        <li><a href="#">Contents</a></li>
-                        <li><a href="#">Javascript</a></li>
-                        <li><a href="#">Accesibility</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingFour">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#collapseFour"
-                      aria-expanded="false"
-                      aria-controls="collapseFour"
-                    >
-                      Layout
-                    </button>
-                  </h2>
-                  <div
-                    id="collapseFour"
-                    class="accordion-collapse collapse"
-                    aria-labelledby="headingFour"
-                    data-bs-parent="#accordionExample"
-                  >
-                    <div class="accordion-body">
-                      <ul>
-                        <li><a href="#">Introduction</a></li>
-                        <li><a href="#">Contents</a></li>
-                        <li><a href="#">Javascript</a></li>
-                        <li><a href="#">Accesibility</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingFive">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#collapseFive"
-                      aria-expanded="false"
-                      aria-controls="collapseFive"
-                    >
-                      Accordion
-                    </button>
-                  </h2>
-                  <div
-                    id="collapseFive"
-                    class="accordion-collapse collapse"
-                    aria-labelledby="headingFive"
-                    data-bs-parent="#accordionExample"
-                  >
-                    <div class="accordion-body">
-                      <ul>
-                        <li><a href="#">Introduction</a></li>
-                        <li><a href="#">Contents</a></li>
-                        <li><a href="#">Javascript</a></li>
-                        <li><a href="#">Accesibility</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
+                
             </div>
           </div>
           <!-- ! mobile view button  --------------------------------------->
@@ -400,8 +255,9 @@
                   data-bs-target="#navbar-example3"
                   data-bs-offset="0"
                   tabindex="0"
+                  class="main-bar-area"
                 >
-                  <h4 id="item-1">Item 1</h4>
+                  <!-- <h4 id="item-1">Item 1</h4>
                   <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sed nulla tempora doloremque, porro, labore ipsam voluptates
@@ -422,7 +278,7 @@
                     facere laudantium saepe at vero quos corporis sed hic eum
                     voluptas quaerat incidunt, reprehenderit quas reiciendis
                     corrupti eos quibusdam nihil eius?
-                  </p>
+                  </p> -->
                 </div>
               </div>
               <!-- ! Right Bar Section ----- -->
@@ -449,5 +305,7 @@
       </div>
     </section>
     <script src="lib/bootstrap.bundle.min.js"></script>
+    <script src="lib/jquery.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
