--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
         <div class="row">
           <div class="col-md-3 d-none d-md-block left-bar">
             <div class="d-flex align-items-start">
-              <div class="accordion w-100" id="accordionExample">
-                
+              <div class="accordion w-100" id="accordionExample"></div>
             </div>
           </div>
           <!-- ! mobile view button  --------------------------------------->
@@ -247,59 +246,9 @@
           <!-- ! main content Area --------- -->
           <div
             class="col-md-9 col-12 align-items-center justify-content-center"
+            id="main-content"
           >
-            <div class="row">
-              <div class="col-md-9 main-bar px-5">
-                <div
-                  data-bs-spy="scroll"
-                  data-bs-target="#navbar-example3"
-                  data-bs-offset="0"
-                  tabindex="0"
-                  class="main-bar-area"
-                >
-                  <!-- <h4 id="item-1">Item 1</h4>
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Sed nulla tempora doloremque, porro, labore ipsam voluptates
-                    earum magni ipsa pariatur aliquam minima qui cumque id
-                    dignissimos eligendi quisquam repudiandae reprehenderit.
-                  </p>
-
-                  <h4 id="item-2">Item 2</h4>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Architecto, ipsum. Quasi, corrupti! Natus illo tempore
-                    commodi quidem id tempora molestias corrupti harum? Itaque
-                    error qui repudiandae, sed ipsam est reiciendis?
-                  </p>
-                  <h4 id="item-3">Item 3</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-                    facere laudantium saepe at vero quos corporis sed hic eum
-                    voluptas quaerat incidunt, reprehenderit quas reiciendis
-                    corrupti eos quibusdam nihil eius?
-                  </p> -->
-                </div>
-              </div>
-              <!-- ! Right Bar Section ----- -->
-              <div class="col-3 d-none d-md-block">
-                <strong
-                  style="border-bottom: 1px solid rgb(125, 124, 124)"
-                  class="pb-1"
-                  >On This Page</strong
-                >
-                <nav
-                  id="navbar-example3"
-                  class="navbar navbar-light flex-column align-items-stretch p-3"
-                >
-                  <nav class="nav nav-pills flex-column">
-                    <a class="nav-link" href="#item-1">Item 1</a>
-                    <a class="nav-link" href="#item-2">Item 2</a>
-                    <a class="nav-link" href="#item-3">Item 3</a>
-                  </nav>
-                </nav>
-              </div>
-            </div>
+            <!-- ! main content here -->
           </div>
         </div>
       </div>
