Upload with separate pages

--- a/pages/getting-started.html
+++ b/pages/getting-started.html
@@ -1,31 +1,37 @@
 <div class="row">
-    <div class="col-md-9 main-bar px-5">
-      <div
-        data-bs-spy="scroll"
-        data-bs-target="#navbar-example3"
-        data-bs-offset="0"
-        tabindex="0"
-        class="main-bar-area"
-      >
-       
-      </div>
-    </div>
-    <!-- ! Right Bar Section ----- -->
-    <div class="col-3 d-none d-md-block">
-      <strong
-        style="border-bottom: 1px solid rgb(125, 124, 124)"
-        class="pb-1"
-        >On This Page</strong
-      >
-      <nav
-        id="navbar-example3"
-        class="navbar navbar-light flex-column align-items-stretch p-3"
-      >
-        <nav class="nav nav-pills flex-column">
-          <a class="nav-link" href="#item-1">Item 1</a>
-          <a class="nav-link" href="#item-2">Item 2</a>
-          <a class="nav-link" href="#item-3">Item 3</a>
-        </nav>
-      </nav>
+  <div class="col-md-9 main-bar px-5">
+    <div
+      data-bs-spy="scroll"
+      data-bs-target="#navbar-example3"
+      data-bs-offset="0"
+      tabindex="0"
+      class="main-bar-area"
+    >
+      <h1>Getting Started</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+        facilis illo, eius, dolorem quis pariatur placeat temporibus inventore
+        quia quaerat culpa iusto. Possimus a sapiente recusandae, at dolorem
+        deserunt facilis. Facilis, expedita deleniti, magnam recusandae facere,
+        tenetur ex eos officiis consectetur voluptatem nobis quod ab ad atque
+        placeat minima? Harum.
+      </p>
     </div>
   </div>
+  <!-- ! Right Bar Section ----- -->
+  <div class="col-3 d-none d-md-block">
+    <strong style="border-bottom: 1px solid rgb(125, 124, 124)" class="pb-1"
+      >On This Page</strong
+    >
+    <nav
+      id="navbar-example3"
+      class="navbar navbar-light flex-column align-items-stretch p-3"
+    >
+      <nav class="nav nav-pills flex-column">
+        <a class="nav-link" href="#item-1">Item 1</a>
+        <a class="nav-link" href="#item-2">Item 2</a>
+        <a class="nav-link" href="#item-3">Item 3</a>
+      </nav>
+    </nav>
+  </div>
+</div>
