--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             id="main-content"
           >
             <!-- ! main content here -->
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-md-9 main-bar px-5">
                 <div
                   data-bs-spy="scroll"
@@ -270,7 +270,7 @@
                   </p>
                 </div>
               </div>
-              <!-- ! Right Bar Section ----- -->
+          
               <div class="col-3 d-none d-md-block">
                 <strong
                   style="border-bottom: 1px solid rgb(125, 124, 124)"
@@ -288,12 +288,17 @@
                   </nav>
                 </nav>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
     </section>
-    <script src="lib/bootstrap.bundle.min.js"></script>
+    <!-- <script src="lib/bootstrap.bundle.min.js"></script> -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <script src="lib/jquery.js"></script>
     <script src="js/app.js"></script>
   </body>
