finalising the app

--- a/pages/customize.html
+++ b/pages/customize.html
@@ -20,17 +20,17 @@
   </div>
   <!-- ! Right Bar Section ----- -->
   <div class="col-3 d-none d-md-block">
-    <strong style="border-bottom: 1px solid rgb(125, 124, 124)" class="pb-1"
+    <strong style="border-bottom: 1px solid rgb(125, 124, 124)" class="pb-1 on-this-page"
       >On This Page</strong
     >
     <nav
       id="navbar-example3"
       class="navbar navbar-light flex-column align-items-stretch p-3"
     >
-      <nav class="nav nav-pills flex-column">
-        <a class="nav-link" href="#item-1">Item 1</a>
+      <nav class="nav nav-pills flex-column right-bar-content">
+        <!-- <a class="nav-link" href="#item-1">Item 1</a>
         <a class="nav-link" href="#item-2">Item 2</a>
-        <a class="nav-link" href="#item-3">Item 3</a>
+        <a class="nav-link" href="#item-3">Item 3</a> -->
       </nav>
     </nav>
   </div>
