--- a/pages/getting-started.html
+++ b/pages/getting-started.html
@@ -58,13 +58,14 @@
 </code></pre>
         </div>
         <h3 id="js">
-          JS<a
+          <a
             class="anchorjs-link"
             aria-label="Anchor"
             data-anchorjs-icon="#"
             href="#js"
             style="padding-left: 0.375em"
-          ></a>
+            >Js</a
+          >
         </h3>
         <p>
           Many of our components require the use of JavaScript to function.
@@ -75,13 +76,14 @@
           <code>&lt;/body&gt;</code> tag, to enable them.
         </p>
         <h4 id="bundle">
-          Bundle<a
+          <a
             class="anchorjs-link"
             aria-label="Anchor"
             data-anchorjs-icon="#"
             href="#bundle"
             style="padding-left: 0.375em"
-          ></a>
+            >Bundle</a
+          >
         </h4>
         <p>
           Include every Bootstrap JavaScript plugin and dependency with one of
@@ -112,13 +114,14 @@
 </code></pre>
         </div>
         <h4 id="separate">
-          Separate<a
+          <a
             class="anchorjs-link"
             aria-label="Anchor"
             data-anchorjs-icon="#"
             href="#separate"
             style="padding-left: 0.375em"
-          ></a>
+            >Separate</a
+          >
         </h4>
         <p>
           If you decide to go with the separate scripts solution, Popper must
@@ -143,13 +146,14 @@
 </code></pre>
         </div>
         <h4 id="modules">
-          Modules<a
+          <a
             class="anchorjs-link"
             aria-label="Anchor"
             data-anchorjs-icon="#"
             href="#modules"
             style="padding-left: 0.375em"
-          ></a>
+            >Modules</a
+          >
         </h4>
         <p>
           If you use <code>&lt;script type="module"&gt;</code>, please refer to
@@ -161,13 +165,14 @@
           section.
         </p>
         <h4 id="components">
-          Components<a
+          <a
             class="anchorjs-link"
             aria-label="Anchor"
             data-anchorjs-icon="#"
             href="#components"
             style="padding-left: 0.375em"
-          ></a>
+            >Components</a
+          >
         </h4>
         <p>
           Curious which components explicitly require our JavaScript and Popper?
@@ -268,13 +273,14 @@
           laying out your site’s content and components.
         </p>
         <h2 id="important-globals">
-          Important globals<a
+          <a
             class="anchorjs-link"
             aria-label="Anchor"
             data-anchorjs-icon="#"
             href="#important-globals"
             style="padding-left: 0.375em"
-          ></a>
+            >Important globals</a
+          >
         </h2>
         <p>
           Bootstrap employs a handful of important global styles and settings
@@ -316,13 +322,14 @@
 </code></pre>
         </div>
         <h3 id="responsive-meta-tag">
-          Responsive meta tag<a
+          <a
             class="anchorjs-link"
             aria-label="Anchor"
             data-anchorjs-icon="#"
             href="#responsive-meta-tag"
             style="padding-left: 0.375em"
-          ></a>
+            >Responsive meta tag</a
+          >
         </h3>
         <p>
           Bootstrap is developed <em>mobile first</em>, a strategy in which we
@@ -406,13 +413,14 @@
           >.
         </p>
         <h3 id="reboot">
-          Reboot<a
+          <a
             class="anchorjs-link"
             aria-label="Anchor"
             data-anchorjs-icon="#"
             href="#reboot"
             style="padding-left: 0.375em"
-          ></a>
+            >Reboot</a
+          >
         </h3>
         <p>
           For improved cross-browser rendering, we use
@@ -478,19 +486,21 @@
     </div>
   </div>
   <!-- ! Right Bar Section ----- -->
-  <div class="col-3 d-none d-md-block">
-    <strong style="border-bottom: 1px solid rgb(125, 124, 124)" class="pb-1"
+  <div class="col-3 d-none d-md-block right-bar">
+    <strong
+      style="border-bottom: 1px solid rgb(125, 124, 124)"
+      class="pb-1 on-this-page"
       >On This Page</strong
     >
     <nav
       id="navbar-example3"
       class="navbar navbar-light flex-column align-items-stretch p-3"
     >
-      <nav class="nav nav-pills flex-column">
-        <a class="nav-link" href="#css">Css</a>
+      <nav class="nav nav-pills flex-column right-bar-content">
+        <!-- <a class="nav-link" href="#css">Css</a>
         <a class="nav-link" href="#starter-template">Starter-template</a>
         <a class="nav-link" href="#community">Community</a>
-        <a class="nav-link" href="#box-sizing">Box-sizing</a>
+        <a class="nav-link" href="#box-sizing">Box-sizing</a> -->
       </nav>
     </nav>
   </div>
