--- a/pages/customize.html
+++ b/pages/customize.html
@@ -20,7 +20,9 @@
   </div>
   <!-- ! Right Bar Section ----- -->
   <div class="col-3 d-none d-md-block">
-    <strong style="border-bottom: 1px solid rgb(125, 124, 124)" class="pb-1 on-this-page"
+    <strong
+      style="border-bottom: 1px solid rgb(125, 124, 124)"
+      class="pb-1 on-this-page"
       >On This Page</strong
     >
     <nav
