changes in styling

--- a/pages/getting-started.html
+++ b/pages/getting-started.html
@@ -496,12 +496,7 @@
       id="navbar-example3"
       class="navbar navbar-light flex-column align-items-stretch p-3"
     >
-      <nav class="nav nav-pills flex-column right-bar-content">
-        <!-- <a class="nav-link" href="#css">Css</a>
-        <a class="nav-link" href="#starter-template">Starter-template</a>
-        <a class="nav-link" href="#community">Community</a>
-        <a class="nav-link" href="#box-sizing">Box-sizing</a> -->
-      </nav>
+      <nav class="nav nav-pills flex-column right-bar-content"></nav>
     </nav>
   </div>
 </div>
