bug need to fixed

--- a/pages/getting-started.html
+++ b/pages/getting-started.html
@@ -1,9 +1,6 @@
-<div class="row">
+
   <div class="col-md-9 main-bar px-5">
     <div
-      data-bs-spy="scroll"
-      data-bs-target="#navbar-example3"
-      data-bs-offset="0"
       tabindex="0"
       class="main-bar-area"
       href="getting-started"
@@ -496,7 +493,7 @@
       id="navbar-example3"
       class="navbar navbar-light flex-column align-items-stretch p-3"
     >
-      <nav class="nav nav-pills flex-column right-bar-content"></nav>
+      <nav class="nav nav-pills flex-column " id="right-bar-content"></nav>
     </nav>
   </div>
-</div>
+
