--- a/index.html
+++ b/index.html
@@ -246,8 +246,10 @@
           <!-- ! main content Area --------- -->
           <div
             class="col-md-9 col-12 align-items-center justify-content-center"
-            id="main-content"
           >
+            <div class="row" id="main-content">
+              
+            </div>
             <!-- ! main content here -->
           </div>
         </div>
