--- a/index.html
+++ b/index.html
@@ -58,12 +58,15 @@
         <div class="row">
           <div class="col-md-3 d-none d-md-block left-bar">
             <div class="d-flex align-items-start">
-              <div class="accordion w-100" id="accordionExample"></div>
+              <div
+                class="accordion w-100 left-menu-bar"
+                id="accordionExample"
+              ></div>
             </div>
           </div>
           <!-- ! mobile view button  --------------------------------------->
 
-          <a
+          <!--          <a
             class="float d-block d-md-none"
             data-bs-toggle="offcanvas"
             href="#offcanvasExample"
@@ -241,13 +244,13 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- ! end of the mobile view nav - -------------------------------------->
           <!-- ! main content Area --------- -->
           <div
             class="col-md-9 col-12 align-items-center justify-content-center"
-            id="main-content"
           >
+            <div class="row" id="main-content"></div>
             <!-- ! main content here -->
           </div>
         </div>
@@ -255,6 +258,7 @@
     </section>
     <script src="lib/bootstrap.bundle.min.js"></script>
     <script src="lib/jquery.js"></script>
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
+    <script src="js/index.js"></script>
   </body>
 </html>
