--- a/index.html
+++ b/index.html
@@ -247,9 +247,7 @@
           <div
             class="col-md-9 col-12 align-items-center justify-content-center"
           >
-            <div class="row" id="main-content">
-              
-            </div>
+            <div class="row" id="main-content"></div>
             <!-- ! main content here -->
           </div>
         </div>
@@ -257,6 +255,7 @@
     </section>
     <script src="lib/bootstrap.bundle.min.js"></script>
     <script src="lib/jquery.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
