removing unnecessary tags from pages

--- a/pages/components.html
+++ b/pages/components.html
@@ -1,39 +1,264 @@
-
-  <div class="col-md-9 main-bar px-5">
-    <div
-      data-bs-spy="scroll"
-      data-bs-target="#navbar-example3"
-      data-bs-offset="0"
-      tabindex="0"
-      class="main-bar-area"
-    >
-      <h1>Components</h1>
+<div class="col-md-9 main-bar px-5">
+  <div>
+    <div class="bd-content ps-lg-4">
+      <h3 id="css">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#css"
+          style="padding-left: 0.375em"
+          >CSS</a
+        >
+      </h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
-        facilis illo, eius, dolorem quis pariatur placeat temporibus inventore
-        quia quaerat culpa iusto. Possimus a sapiente recusandae, at dolorem
-        deserunt facilis. Facilis, expedita deleniti, magnam recusandae facere,
-        tenetur ex eos officiis consectetur voluptatem nobis quod ab ad atque
-        placeat minima? Harum.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+        consequatur beatae modi quos quas facere neque at amet. Illo cupiditate
+        nam ratione. Quod consequatur esse repellat quae cupiditate dolor animi?
       </p>
+
+      <h3 id="js">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#js"
+          style="padding-left: 0.375em"
+          >Js</a
+        >
+      </h3>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, tempore
+        ex at sed deserunt ipsum incidunt doloremque. Blanditiis hic tenetur
+        porro quae harum eveniet, provident deserunt voluptatem explicabo beatae
+        magni!
+      </p>
+      <h4 id="bundle">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#bundle"
+          style="padding-left: 0.375em"
+          >Bundle</a
+        >
+      </h4>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil aliquam
+        officiis sapiente, nostrum, ut animi corrupti at harum quas omnis
+        aliquid vitae deleniti nisi, molestiae hic dolorem facilis sunt
+        assumenda.
+      </p>
+
+      <h4 id="separate">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#separate"
+          style="padding-left: 0.375em"
+          >Separate</a
+        >
+      </h4>
+      <p>
+        If you decide to go with the separate scripts solution, Popper must come
+        first (if you’re using tooltips or popovers), and then our JavaScript
+        plugins.
+      </p>
+
+      <h4 id="modules">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#modules"
+          style="padding-left: 0.375em"
+          >Modules</a
+        >
+      </h4>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ab
+        voluptas aliquid molestiae similique maiores autem nobis quidem ratione
+        magni rem voluptatem, saepe veniam expedita sequi distinctio ea vel
+        impedit.
+      </p>
+      <h4 id="components">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#components"
+          style="padding-left: 0.375em"
+          >Components</a
+        >
+      </h4>
+      <p>
+        Curious which components explicitly require our JavaScript and Popper?
+        Click the show components link below. If you’re at all unsure about the
+        general page structure, keep reading for an example page template.
+      </p>
+
+      <h2 id="starter-template">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#starter-template"
+          style="padding-left: 0.375em"
+        >
+          Starter template</a
+        >
+      </h2>
+      <p>
+        Be sure to have your pages set up with the latest design and development
+        standards. That means using an HTML5 doctype and including a viewport
+        meta tag for proper responsive behaviors. Put it all together and your
+        pages should look like this:
+      </p>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla
+        deserunt, neque est illo eos voluptas dolores vitae vero reiciendis!
+        Magni architecto cupiditate id veritatis quidem reiciendis ratione
+        voluptate sapiente alias?
+      </p>
+      <h2 id="important-globals">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#important-globals"
+          style="padding-left: 0.375em"
+          >Important globals</a
+        >
+      </h2>
+      <p>
+        Bootstrap employs a handful of important global styles and settings that
+        you’ll need to be aware of when using it, all of which are almost
+        exclusively geared towards the <em>normalization</em> of cross browser
+        styles. Let’s dive in.
+      </p>
+      <h3 id="html5-doctype">
+        HTML5 doctype<a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#html5-doctype"
+          style="padding-left: 0.375em"
+        ></a>
+      </h3>
+      <p>
+        Bootstrap requires the use of the HTML5 doctype. Without it, you’ll see
+        some funky incomplete styling, but including it shouldn’t cause any
+        considerable hiccups.
+      </p>
+
+      <h3 id="responsive-meta-tag">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#responsive-meta-tag"
+          style="padding-left: 0.375em"
+          >Responsive meta tag</a
+        >
+      </h3>
+      <p>
+        Bootstrap is developed <em>mobile first</em>, a strategy in which we
+        optimize code for mobile devices first and then scale up components as
+        necessary using CSS media queries. To ensure proper rendering and touch
+        zooming for all devices,
+        <strong>add the responsive viewport meta tag</strong> to your
+        <code>&lt;head&gt;</code>.
+      </p>
+
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia tempora
+        nobis quae culpa quidem porro neque, illum accusantium sed officiis
+        iste, cupiditate recusandae ipsum reprehenderit! Esse consectetur omnis
+        modi cumque.
+      </p>
+      <h3 id="box-sizing">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#box-sizing"
+          style="padding-left: 0.375em"
+        >
+          Box-sizing</a
+        >
+      </h3>
+      <p>
+        For more straightforward sizing in CSS, we switch the global
+        <code>box-sizing</code> value from <code>content-box</code> to
+        <code>border-box</code>. This ensures <code>padding</code> does not
+        affect the final computed width of an element, but it can cause problems
+        with some third-party software like Google Maps and Google Custom Search
+        Engine.
+      </p>
+      <p>
+        On the rare occasion you need to override it, use something like the
+        following:
+      </p>
+
+      <p>
+        With the above snippet, nested elements—including generated content via
+        <code>::before</code> and <code>::after</code>—will all inherit the
+        specified <code>box-sizing</code> for that
+        <code>.selector-for-some-widget</code>.
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt
+        placeat, quas impedit harum quo hic aliquid mollitia aut vitae laborum.
+      </p>
+      <h3 id="reboot">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#reboot"
+          style="padding-left: 0.375em"
+          >Reboot</a
+        >
+      </h3>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+        labore saepe accusantium nemo quibusdam? Officia reprehenderit assumenda
+        modi sapiente magni.
+      </p>
+      <h2 id="community">
+        <a
+          class="anchorjs-link"
+          aria-label="Anchor"
+          data-anchorjs-icon="#"
+          href="#community"
+          style="padding-left: 0.375em"
+        >
+          Community</a
+        >
+      </h2>
+      <p>
+        Stay up to date on the development of Bootstrap and reach out to the
+        community with these helpful resources.
+      </p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa expedita
+      voluptatem voluptatibus aliquid aliquam blanditiis explicabo. Distinctio
+      nulla corrupti nisi!
     </div>
   </div>
-  <!-- ! Right Bar Section ----- -->
-  <div class="col-3 d-none d-md-block">
-    <strong
-      style="border-bottom: 1px solid rgb(125, 124, 124)"
-      class="pb-1 on-this-page"
-      >On This Page</strong
-    >
-    <nav
-      id="navbar-example3"
-      class="navbar navbar-light flex-column align-items-stretch p-3"
-    >
-      <nav class="nav nav-pills flex-column right-bar-content">
-        <!-- <a class="nav-link" href="#item-1">Item 1</a>
-          <a class="nav-link" href="#item-2">Item 2</a>
-          <a class="nav-link" href="#item-3">Item 3</a> -->
-      </nav>
-    </nav>
-  </div>
-
+</div>
+<!-- ! Right Bar Section ----- -->
+<div class="col-3 d-none d-md-block right-bar">
+  <strong
+    style="border-bottom: 1px solid rgb(125, 124, 124)"
+    class="pb-1 on-this-page"
+    >On This Page</strong
+  >
+  <nav
+    id="navbar-example3"
+    class="navbar navbar-light flex-column align-items-stretch p-3"
+  >
+    <nav class="nav nav-pills flex-column right-bar-content"></nav>
+  </nav>
+</div>
