--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </section>
     <script src="lib/bootstrap.bundle.min.js"></script>
     <script src="lib/jquery.js"></script>
-    <!-- <script src="js/app.js"></script> -->
-    <script src="js/index.js"></script>
+    <script src="js/app.js"></script>
+    <!-- <script src="js/index.js"></script> -->
   </body>
 </html>
