clean code setup is done

--- a/pages/components.html
+++ b/pages/components.html
@@ -1,15 +1,9 @@
 <div class="col-md-9 main-bar px-5">
   <div>
     <div class="bd-content ps-lg-4">
+      <h2>Components</h2>
       <h3 id="css">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#css"
-          style="padding-left: 0.375em"
-          >CSS</a
-        >
+        <a href="#layout">layout</a>
       </h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
@@ -18,14 +12,7 @@
       </p>
 
       <h3 id="js">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#js"
-          style="padding-left: 0.375em"
-          >Js</a
-        >
+        <a href="#js">Js</a>
       </h3>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, tempore
@@ -34,14 +21,7 @@
         magni!
       </p>
       <h4 id="bundle">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#bundle"
-          style="padding-left: 0.375em"
-          >Bundle</a
-        >
+        <a href="#bundle">Bundle</a>
       </h4>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil aliquam
@@ -51,14 +31,7 @@
       </p>
 
       <h4 id="separate">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#separate"
-          style="padding-left: 0.375em"
-          >Separate</a
-        >
+        <a href="#separate">Separate</a>
       </h4>
       <p>
         If you decide to go with the separate scripts solution, Popper must come
@@ -67,14 +40,7 @@
       </p>
 
       <h4 id="modules">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#modules"
-          style="padding-left: 0.375em"
-          >Modules</a
-        >
+        <a href="#modules">Modules</a>
       </h4>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ab
@@ -83,14 +49,7 @@
         impedit.
       </p>
       <h4 id="components">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#components"
-          style="padding-left: 0.375em"
-          >Components</a
-        >
+        <a href="#components">Components</a>
       </h4>
       <p>
         Curious which components explicitly require our JavaScript and Popper?
@@ -99,15 +58,7 @@
       </p>
 
       <h2 id="starter-template">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#starter-template"
-          style="padding-left: 0.375em"
-        >
-          Starter template</a
-        >
+        <a href="#starter-template"> Starter template</a>
       </h2>
       <p>
         Be sure to have your pages set up with the latest design and development
@@ -123,14 +74,7 @@
         voluptate sapiente alias?
       </p>
       <h2 id="important-globals">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#important-globals"
-          style="padding-left: 0.375em"
-          >Important globals</a
-        >
+        <a href="#important-globals">Important globals</a>
       </h2>
       <p>
         Bootstrap employs a handful of important global styles and settings that
@@ -138,15 +82,7 @@
         exclusively geared towards the <em>normalization</em> of cross browser
         styles. Let’s dive in.
       </p>
-      <h3 id="html5-doctype">
-        HTML5 doctype<a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#html5-doctype"
-          style="padding-left: 0.375em"
-        ></a>
-      </h3>
+      <h3 id="html5-doctype">HTML5 doctype<a href="#html5-doctype"></a></h3>
       <p>
         Bootstrap requires the use of the HTML5 doctype. Without it, you’ll see
         some funky incomplete styling, but including it shouldn’t cause any
@@ -154,14 +90,7 @@
       </p>
 
       <h3 id="responsive-meta-tag">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#responsive-meta-tag"
-          style="padding-left: 0.375em"
-          >Responsive meta tag</a
-        >
+        <a href="#responsive-meta-tag">Responsive meta tag</a>
       </h3>
       <p>
         Bootstrap is developed <em>mobile first</em>, a strategy in which we
@@ -179,15 +108,7 @@
         modi cumque.
       </p>
       <h3 id="box-sizing">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#box-sizing"
-          style="padding-left: 0.375em"
-        >
-          Box-sizing</a
-        >
+        <a href="#box-sizing"> Box-sizing</a>
       </h3>
       <p>
         For more straightforward sizing in CSS, we switch the global
@@ -213,14 +134,7 @@
         placeat, quas impedit harum quo hic aliquid mollitia aut vitae laborum.
       </p>
       <h3 id="reboot">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#reboot"
-          style="padding-left: 0.375em"
-          >Reboot</a
-        >
+        <a href="#reboot">Reboot</a>
       </h3>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
@@ -228,15 +142,7 @@
         modi sapiente magni.
       </p>
       <h2 id="community">
-        <a
-          class="anchorjs-link"
-          aria-label="Anchor"
-          data-anchorjs-icon="#"
-          href="#community"
-          style="padding-left: 0.375em"
-        >
-          Community</a
-        >
+        <a href="#community"> Community</a>
       </h2>
       <p>
         Stay up to date on the development of Bootstrap and reach out to the
@@ -259,6 +165,6 @@
     id="navbar-example3"
     class="navbar navbar-light flex-column align-items-stretch p-3"
   >
-    <nav class="nav nav-pills flex-column right-bar-content"></nav>
+    <nav class="nav nav-pills flex-column" id="right-bar-content"></nav>
   </nav>
 </div>
